feature: add /getChangeSummary handler
